--- a/IBM Cognitive Class Lab Project/Data Science Methodology Lab Project/Project-1-Business Understanding & Analytical Approach.ipynb
+++ b/IBM Cognitive Class Lab Project/Data Science Methodology Lab Project/Project-1-Business Understanding & Analytical Approach.ipynb
@@ -5,31 +5,13 @@
    "metadata": {
     "button": false,
     "deletable": true,
-    "jupyter": {
-     "source_hidden": true
-    },
     "new_sheet": false,
     "run_control": {
      "read_only": false
     }
    },
    "source": [
-    "<a href=\"https://cognitiveclass.ai\"><img src = \"https://ibm.box.com/shared/static/9gegpsmnsoo25ikkbl4qzlvlyjbgxs5x.png\" width = 400> </a>\n",
     "\n",
-    "<h1 align=center><font size = 5>From Problem to Approach</font></h1>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
     "## Introduction\n",
     "\n",
     "The aim of these labs is to reinforce the concepts that we discuss in each module's videos. These labs will revolve around the use case of food recipes, and together, we will walk through the process that data scientists usually follow when trying to solve a problem. Let's get started!\n",
@@ -50,56 +32,7 @@
     }
    },
    "source": [
-    "## Table of Contents\n",
-    "\n",
-    "<div class=\"alert alert-block alert-info\" style=\"margin-top: 20px\">\n",
-    "\n",
-    "1. [Business Understanding](#0)<br>\n",
-    "2. [Analytic Approach](#2) <br>\n",
-    "</div>\n",
-    "<hr>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "# Business Understanding <a id=\"0\"></a>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "This is the **Data Science Methodology**, a flowchart that begins with business understanding."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "<img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DS0103EN/labs/images/lab1_fig1_flowchart_business_understanding.png\" width=500>"
+    "# Business Understanding "
    ]
   },
   {
@@ -144,20 +77,6 @@
    },
    "source": [
     "#### Looking at this diagram, we immediately spot two outstanding features of the data science methodology."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "<img src = \"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DS0103EN/labs/images/lab1_fig2_datascience_methodology_flowchart.png\" width = 500> "
    ]
   },
   {
@@ -476,20 +395,6 @@
     }
    },
    "source": [
-    "<img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DS0103EN/labs/images/lab1_fig4_flowchart_analytic_approach.png\" width=500>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
     "#### So why are we interested in data science?"
    ]
   },
@@ -563,20 +468,6 @@
    },
    "source": [
     "This is a decision tree that a naive person might create manually. Starting at the top with all the recipes for all the cuisines in the world, if a recipe contains **rice**, then this decision tree would classify it as a **Japanese** cuisine. Otherwise, it would be classified as not a **Japanese** cuisine."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "button": false,
-    "deletable": true,
-    "new_sheet": false,
-    "run_control": {
-     "read_only": false
-    }
-   },
-   "source": [
-    "<img src=\"https://s3-api.us-geo.objectstorage.softlayer.net/cf-courses-data/CognitiveClass/DS0103EN/labs/images/lab1_fig5_decision_tree_3.png\" width=500>"
    ]
   },
   {
